objects/pse__Forecast_Worksheet__c.object
<CustomObject>
    <customHelpPage>pse__ForecastWorksheetHelp</customHelpPage>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>pse__Actual_Billable_Hours__c</fullName>
        <label>Actual Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Expenses_External__c</fullName>
        <label>Actual Expenses External</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Expenses__c</fullName>
        <label>Actual Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Milestone__c</fullName>
        <label>Actual Milestone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Miscellaneous_Adjustments__c</fullName>
        <label>Actual Miscellaneous Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Timecard_External__c</fullName>
        <label>Actual Timecard External</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Timecard__c</fullName>
        <label>Actual Timecard</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Backlog_Milestone__c</fullName>
        <label>Backlog Milestone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Backlog_Scheduled__c</fullName>
        <label>Backlog Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Backlog_Unscheduled__c</fullName>
        <label>Backlog Unscheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Bill_Rate__c</fullName>
        <label>Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Forecast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forecast</label>
        <referenceTo>pse__Forecast__c</referenceTo>
        <relationshipName>Forecast_Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipName>Forecast_Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Period_Total_With_Expenses__c</fullName>
        <label>Period Total With Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Period_Total__c</fullName>
        <label>Period Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipName>Forecast_Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipName>Forecast_Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipName>Forecast_Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Run_Rate_With_Expenses__c</fullName>
        <label>Run Rate With Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Run_Rate__c</fullName>
        <label>Run Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Running_Total_With_Expenses__c</fullName>
        <label>Running Total With Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Running_Total__c</fullName>
        <label>Running Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Sales_Opps_High__c</fullName>
        <label>Sales Opps High</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Sales_Opps_Low__c</fullName>
        <label>Sales Opps Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Sales_Opps_Medium__c</fullName>
        <label>Sales Opps Medium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Submitted_Expenses_External__c</fullName>
        <label>Submitted Expenses External</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Submitted_Expenses__c</fullName>
        <label>Submitted Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Submitted_Timecard_External__c</fullName>
        <label>Submitted Timecard External</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Submitted_Timecard__c</fullName>
        <label>Submitted Timecard</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period__c</fullName>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipName>Forecast_Worksheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>zDeprecated:Forecast Worksheet</label>
    <nameField>
        <displayFormat>Worksheet-{MMDDYYYY}-{00}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>zDeprecated:Forecast Worksheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>